# gdpm-website

./: .gitignore  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts  wrangler.jsonc
.github/workflows/: deploy.yml
.run/: Vue管理.run.xml  woff2字体压缩.run.xml
notes/: README.md  todo.md
notes/todo/: touch-scroll.md
scripts/project-init/: init.bat  init.sh
scripts/utils/: convert_fonts.py
scripts/vuem/: __init__.py  cli.py  utils.py
scripts/vuem/commands/: __init__.py  analyze.py  build.py  check.py  clean.py  dev.py  generate.py  preview.py  version.py
src/: App.vue  i18n.ts  main.ts  style.css
src/components/: CircleTransition.vue  Commands.vue  Community.vue  CopyButton.vue  CustomCursor.vue  Features.vue  Footer.vue  FullPageScroll.vue  Header.vue  Hero.vue  Installation.vue  Modal.vue  QuickStart.vue  RouteLoading.vue  Versions.vue
src/composables/: useBanner.ts  useDevtoolsDetector.ts  useGitHubReleases.ts  useModal.ts  useReleaseDownload.ts  useScrollAnimation.ts  useTouchScroll.ts
src/router/: dev.ts  index.ts
src/utils/: banner.ts  os.ts  version.ts
src/views/: Download.vue  Home.vue  NotFound.vue  Versions.vue
src/views/demo/: ModalDemo.vue
