[project]
name = "gdpm-website"
version = "0.1.0"
description = "GDPM official website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
vuem = "vuem.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/vuem"]

[dependency-groups]
dev = [
    "rich>=15.0.0",
    "typer>=0.26.8",
]
