[project]
name = "gdpm-website"
version = "0.1.0"
description = "Official website for GDPM - Godot Dependency Package Manager"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
vuem = "vuem.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/vuem"]

[dependency-groups]
dev = [
    "brotli>=1.2.0",
    "fonttools>=4.63.0",
    "rich>=15.0.0",
    "typer>=0.26.8",
]
